--- a/index.html
+++ b/index.html
@@ -10,24 +10,26 @@
 </head>
 <body>
     <div id="container">
+            <div id="display"></div>
         <div id="calculator">
             <div id="display"></div>
-           <button class="button" id="one">1</button>
-           <button class="button" id="two">2</button>
-           <button class="button" id="three">3</button>
-           <button class="button" id="four">4</button>
-           <button class="button" id="five">5</button>
-           <button class="button" id="six">6</button>
-           <button class="button" id="seven">7</button>
-           <button class="button" id="eight">8</button>
-           <button class="button" id="nine">9</button>
-           <button class="button" id="nought">0</button>
-           <button class="button" id="plus">+</button>
-           <button class="button" id="minus">-</button>
-           <button class="button" id="divide">/</button>
-           <button class="button" id="multi">*</button>
-           <button class="button" id="equals">=</button>
-           <button class="button" id="reset">=</button>
+           <button class="digit" id="one">1</button>
+           <button class="digit" id="two">2</button>
+           <button class="digit" id="three">3</button>
+           <button class="digit" id="four">4</button>
+           <button class="digit" id="five">5</button>
+           <button class="digit" id="six">6</button>
+           <button class="digit" id="seven">7</button>
+           <button class="digit" id="eight">8</button>
+           <button class="digit" id="nine">9</button>
+           <button class="digit" id="nought">0</button>
+           <button class="digit" id="decimal"></button>
+           <button class="digit" id="plus">+</button>
+           <button class="digit" id="minus">-</button>
+           <button class="digit" id="divide">/</button>
+           <button class="digit" id="multi">*</button>
+           <button class="digit" id="equals">=</button>
+           <button class="digit" id="reset">C</button>
         </div>
     </div>
     
