got the display working and i can add digits to it.

--- a/index.html
+++ b/index.html
@@ -10,26 +10,26 @@
 </head>
 <body>
     <div id="container">
-            <div id="display"></div>
-        <div id="calculator">
             
-           <button class="digit" id="one">1</button>
-           <button class="digit" id="two">2</button>
-           <button class="digit" id="three">3</button>
-           <button class="digit" id="four">4</button>
-           <button class="digit" id="five">5</button>
-           <button class="digit" id="six">6</button>
-           <button class="digit" id="seven">7</button>
-           <button class="digit" id="eight">8</button>
-           <button class="digit" id="nine">9</button>
-           <button class="digit" id="nought">0</button>
-           <button class="digit" id="dec"></button>
-           <button class="digit" id="plus">+</button>
-           <button class="digit" id="minus">-</button>
-           <button class="digit" id="divide">/</button>
-           <button class="digit" id="multi">*</button>
-           <button class="digit" id="equals">=</button>
-           <button class="digit" id="reset">C</button>
+        <div id="calculator">
+            <div id="display"></div>
+           <button class="digit" id="one" onclick="addDigits(1)">1</button>
+           <button class="digit" id="two" onclick="addDigits(2)">2</button>
+           <button class="digit" id="three" onclick="addDigits(3)">3</button>
+           <button class="digit" id="four" onclick="addDigits(4)">4</button>
+           <button class="digit" id="five" onclick="addDigits(5)">5</button>
+           <button class="digit" id="six" onclick="addDigits(6)">6</button>
+           <button class="digit" id="seven" onclick="addDigits(7)">7</button>
+           <button class="digit" id="eight" onclick="addDigits(8)">8</button>
+           <button class="digit" id="nine" onclick="addDigits(9)">9</button>
+           <button class="digit" id="nought" onclick="addDigits(0)">0</button>
+           <button class="digit" id="dec" onclick="addDigits('.')">.</button>
+           <button class="" id="plus">+</button>
+           <button class="" id="minus">-</button>
+           <button class="" id="divide">/</button>
+           <button class="" id="multi">*</button>
+           <button class="" id="equals">=</button>
+           <button class="" id="reset">C</button>
         </div>
     </div>
     
