--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
            <button class="digit" id="nine" onclick="addDigits(9)">9</button>
            <button class="digit" id="nought" onclick="addDigits(0)">0</button>
            <button class="digit" id="dec" onclick="addDigits('.')">.</button>
-           <button class="" id="plus">+</button>
-           <button class="" id="minus">-</button>
-           <button class="" id="divide">/</button>
-           <button class="" id="multi">*</button>
+           <button class="" id="plus" onclick="signHandler('+')">+</button>
+           <button class="" id="minus" onclick="signHandler('-')">-</button>
+           <button class="" id="divide" onclick="signHandler('/')">/</button>
+           <button class="" id="multi" onclick="signHandler('x')">*</button>
            <button class="" id="equals">=</button>
            <button class="" id="reset">C</button>
         </div>
