--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
             
         <div id="calculator">
             <div id="display"></div>
+            <!-- each button calls a function which updates the display or performs the math -->
            <button class="digit" id="one" onclick="addDigits(1)">1</button>
            <button class="digit" id="two" onclick="addDigits(2)">2</button>
            <button class="digit" id="three" onclick="addDigits(3)">3</button>
@@ -24,11 +25,13 @@
            <button class="digit" id="nine" onclick="addDigits(9)">9</button>
            <button class="digit" id="nought" onclick="addDigits(0)">0</button>
            <button class="digit" id="dec" onclick="addDigits('.')">.</button>
+           <!-- each sign is passed to the signHandler function as a string -->
            <button class="" id="plus" onclick="signHandler('+')">+</button>
            <button class="" id="minus" onclick="signHandler('-')">-</button>
            <button class="" id="divide" onclick="signHandler('/')">/</button>
            <button class="" id="multi" onclick="signHandler('x')">*</button>
-           <button class="" id="equals">=</button>
+
+           <button class="" id="equals" onclick="equals()">=</button>
            <button class="" id="reset">C</button>
         </div>
     </div>
