added a div to display a sign value and added repeated use functionality

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
             
         <div id="calculator">
             <div id="display"></div>
+            <div id="sign"></div>
             <!-- each button calls a function which updates the display or performs the math -->
            <button class="digit" id="one" onclick="addDigits(1)">1</button>
            <button class="digit" id="two" onclick="addDigits(2)">2</button>
