updated some css elements and added 2 more buttons for possible extras.

--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
             <button class="digit" id="eight" onclick="addDigits(8)">8</button>
             <button class="digit" id="nine" onclick="addDigits(9)">9</button>
             <button class="digit" id="nought" onclick="addDigits(0)">0</button>
+            <button class="" id="new1">under construction</button>
+            <button class="" id="new2">under construction</button>
             <!-- need to either add a new function for handling decimals or incorporate some logic into addDigits() -->
             <button class="digit" id="dec" onclick="addDecimal()">.</button>
             <!-- each sign is passed to the signHandler function as a string -->
