--- a/index.html
+++ b/index.html
@@ -8,12 +8,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="./main.css" />
     <link href="https://fonts.googleapis.com/css?family=Orbitron" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Yesteryear" rel="stylesheet">
 </head>
 
 <body>
     <div id="container">
 
         <div id="calculator">
+                <div id="supercalc">SuperCalc</div>
             <div id="display"></div>
             <div id="sign"></div>
             <!-- each button calls a function which updates the display or performs the math -->
